Work on some preliminary data analyses

--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -13,6 +13,7 @@ always_allow_html: true
 library(tidyverse)    # Tidy code
 library(cowplot)      # Plots on a grid
 library(raster)       # Data gridding
+library(sf)           # Spatial data
 library(rgdal)        # Read shapefiles
 library(ggpubr)       # Deal with stats
 library(ggfortify)    # Plotting glm
@@ -38,7 +39,7 @@ I want to test whether temperature and salinity at mesopelagic depth, sea-ice co
 
 ```{r data-loading, message=FALSE}
 # Map projections
-cell_res <- 50 # Cell resolution in km
+cell_res <- 100 # Cell resolution in km
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
@@ -60,18 +61,29 @@ coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coast
   fortify() %>% # Convert to a dataframe for ggplot
   rename(xc = long, yc = lat)
 
+# IHO regions
+# IHO_latlon <- readOGR("data/arctic_regions/World_Seas_IHO_v3.shp", verbose = F) %>% # Coastline in latlon
+#   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
+#   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
+#   fortify() %>% # Convert to dataframe for ggplot
+#   rename(xc = long, yc = lat)
+# IHO_laea <- readOGR("data/arctic_regions/World_Seas_IHO_v3.shp", verbose = F) %>% # Coastline in latlon
+#   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
+#   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
+#   spTransform(CRSobj = crs(arctic_laea)) %>% # Project shapefile in laea
+#   fortify() %>% # Convert to dataframe for ggplot
+#   rename(xc = long, yc = lat)
+
 # Gridded acoustic, CTD, and sea ice data
 load("data/acoustics/SA_grids.RData") # Acoustic data
 # load("data/CTD/CTD_grids.RData") # CTD data
 load("data/remote_sensing/physics_grids.RData") # Modelled physics data 
 load("data/remote_sensing/seaice_grids.RData") # Remote sensing sea ice data
-
-rm(list = ls(pattern = "latlon")) # Remove EPSG:4326 files
 ```
 
 # Data preparation
 
-I combine data using the EASE-Grid 2.0 North (EPSG:6931).
+I combine data using the EASE-Grid 2.0 North (EPSG:6931) and normalize the covariates. Calculation of the anomalies are also computed based on the IHO areas.
 
 ```{r combine-data}
 SA_laea <- SA_grid_laea %>%  # Tidy anomaly dataset for joining
@@ -80,12 +92,16 @@ phy_laea <- phy_grid_laea %>% # Tidy remote sensing dataset for joining
   dplyr::select(-lat, -lon)
 
 stat_laea <- left_join(SA_laea, phy_laea, by = c("year", "area", "xc", "yc", "cell_res")) %>% # Join acoustic and seaice
-  filter(depth == 380) %>% # Select data at 222 m depth
-  mutate(SA_int = 10 * log10(NASC_int))
+  # filter(depth == 380) %>% # Select data at 380 m depth
+  mutate(SA_int = 10 * log10(NASC_int)) %>%
+  group_by(area) %>%
+  mutate(SA_int_n = (SA_int - min(SA_int)) / (max(SA_int - min(SA_int))),
+         velocity_n = (velocity - min(velocity)) / (max(velocity - min(velocity)))) %>%
+  ungroup()
 ```
 
-# Data exploration 
 
+# Data exploration 
 
 Maps of all variables.
 
@@ -93,7 +109,7 @@ Maps of all variables.
 stat_laea %>% # Backscatter
   ggplot(aes(x = xc,  y = yc)) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = SA_int), color = "grey30") +
+  geom_tile(aes(fill = SA_int_n), color = "grey30") +
   scale_fill_viridis_c("SA int (dB)", option = "turbo", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Integrated SA") +
@@ -120,7 +136,7 @@ stat_laea %>% # Temperature
   geom_tile(aes(fill = thetao), color = "grey30") +
   scale_fill_cmocean("Temp (dC)", name = "thermal", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
-  ggtitle("Temperature at 222 m depth") +
+  ggtitle("Temperature at 380 m depth") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
@@ -132,7 +148,7 @@ stat_laea %>% # Salinity
   geom_tile(aes(fill = so), color = "grey30") +
   scale_fill_cmocean("Sal (psu)", name = "haline", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
-  ggtitle("Salinity at 222 m depth") +
+  ggtitle("Salinity at 380 m depth") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
@@ -143,6 +159,18 @@ stat_laea %>% # Ice concentration
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
   geom_tile(aes(fill = velocity), color = "grey30") +
   scale_fill_cmocean("velo (m/s)", name = "speed", na.value = "red") +
+  facet_wrap(~ year, ncol = 3) +
+  ggtitle("Current velocity at 380 m depth") +
+  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+```
+
+```{r map-velocity-normalized, fig.height=3, fig.width=7}
+stat_laea %>% # Ice concentration
+  ggplot(aes(x = xc,  y = yc)) +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+  geom_tile(aes(fill = velocity_n), color = "grey30") +
+  scale_fill_cmocean("Normalized velo", name = "speed", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Current velocity at 380 m depth") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
@@ -189,15 +217,70 @@ Check the general correlation for the entire data set.
 
 ```{r corr-calculations}
 corr <- stat_laea %>% # Compute Spearman correlation matrix
-  dplyr::select(SA_int, NASC_anomaly, thetao, so, velocity, mlotst, siconc, sithick) %>%
+  dplyr::select(SA_int_n, NASC_anomaly, thetao, temp_anomaly, velocity, velocity_anomaly, siconc) %>%
   cor(., method = "spearman") %>%
   round(., 2)
 corr_pvalues <- stat_laea %>% # Compute Spearman correlation matrix p-values
-  dplyr::select(SA_int, NASC_anomaly, thetao, so, velocity, mlotst, siconc, sithick) %>%
+  dplyr::select(SA_int_n, NASC_anomaly, thetao, temp_anomaly, velocity, velocity_anomaly, siconc) %>%
   cor_pmat(., method = "spearman") 
 ```
 
 ```{r corr-plot}
 ggcorrplot(corr, type = "lower", p.mat = corr_pvalues)
 ```
+
 S~A~ int is not correlated with temperature and velocity. However, these correlation are for the entire dataset and do not take into account the spatial aspect of the data.
+
+# Spatial correlation
+
+## Integrated backscatter 
+
+```{r scatterplot-velocity, fig.height=3, fig.width=8}
+stat_laea %>%
+  # filter(area == "SV") %>%
+  ggplot(aes(x = velocity, y = SA_int_n)) +
+  # ggplot(aes(x = velocity, y = NASC_anomaly)) +
+  geom_point() + 
+  geom_smooth(method = "lm") +
+  # facet_wrap(~ IHO_area) +
+  facet_wrap(~ area) +
+  theme(legend.position = "top")
+```
+```{r scatterplot-temp-anomaly, fig.height=3, fig.width=8}
+stat_laea %>%
+  # filter(area == "SV") %>%
+  ggplot(aes(x = temp_anomaly, y = SA_int_n)) +
+  # ggplot(aes(x = velocity, y = NASC_anomaly)) +
+  geom_point() + 
+  geom_smooth(method = "lm") +
+  # facet_wrap(~ IHO_area) +
+  facet_wrap(~ area, scales = "free_x") +
+  theme(legend.position = "top")
+```
+
+```{r scatterplot-siconc, fig.height=3, fig.width=8}
+stat_laea %>%
+  # filter(area == "SV") %>%
+  ggplot(aes(x = siconc, y = SA_int_n)) +
+  # ggplot(aes(x = velocity, y = NASC_anomaly)) +
+  geom_point() + 
+  geom_smooth(method = "lm") +
+  # facet_wrap(~ IHO_area) +
+  facet_wrap(~ area, scales = "free_x") +
+  theme(legend.position = "top")
+```
+
+I will calculate the correlation between integrated backscatter and current velocity for each cell of the raster. Before calculating the correlation I need to check the distribution of the data.
+
+```{r distribution-NASC-anomaly-velocity, fig.height=3, fig.width=7}
+plot_grid(stat_laea %>%
+            ggdensity(x = "SA_int_n", fill = "lightgray") +
+            stat_overlay_normal_density(color = "red", linetype = "dashed") +
+            scale_x_continuous(expression("S"[A]*" int (dB)")),
+          stat_laea %>%
+            ggdensity(x = "velocity_n", fill = "lightgray") +
+            stat_overlay_normal_density(color = "red", linetype = "dashed") +
+            scale_x_continuous(expression("Current velocity (m s"^-1*")")))
+```
+
+The grey black curve is the density of the data (S~A~ int and ) and the red curve is the normal distribution. 
