Fit a linear mixed model.

--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -21,6 +21,7 @@ library(RColorBrewer) # Diverging colour palettes
 library(cmocean)      # Oceanographic colour palettes
 library(moments)      # Overlay distributions
 library(ggcorrplot)   # Correlation plots
+library(kableExtra)   # Pretty tables
 # Custom figure theme
 theme_set(theme_bw())
 theme_update(axis.text = element_text(size = 9),
@@ -49,11 +50,11 @@ arctic_latlon <- raster(extent(-155, 35, 66, 85), # Base projection for acoustic
                         res = c(2, 1)) # cells of 2 degree longitude per 1 degree latitude
 
 # Coastline shapefiles
-coast_10m_latlon <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in latlon
-  spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
-  crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
-  fortify() %>% # Convert to a dataframe for ggplot
-  rename(lon = long)
+# coast_10m_latlon <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in latlon
+#   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
+#   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
+#   fortify() %>% # Convert to a dataframe for ggplot
+#   rename(lon = long)
 coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in laea
   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
@@ -90,14 +91,53 @@ SA_laea <- SA_grid_laea %>%  # Tidy anomaly dataset for joining
   dplyr::select(-lat, -lon)
 phy_laea <- phy_grid_laea %>% # Tidy remote sensing dataset for joining
   dplyr::select(-lat, -lon)
+seaice_laea <- seaice_grid_laea %>%
+  dplyr::select(-lat, -lon)
 
-stat_laea <- left_join(SA_laea, phy_laea, by = c("year", "area", "xc", "yc", "cell_res")) %>% # Join acoustic and seaice
-  # filter(depth == 380) %>% # Select data at 380 m depth
+stat_laea <- left_join(SA_laea, phy_laea, by = c("year", "area", "xc", "yc", "cell_res")) %>% # Join acoustic and physics
+  left_join(., seaice_laea, by = c("year", "area", "xc", "yc", "cell_res")) %>%
+  # For cells that have NaN, get the mean of the surrounding cells
+   rowwise() %>%
+   mutate(xc_na = if_else(is.na(mean_ice_conc) == T, xc, NaN),
+          yc_na = if_else(is.na(mean_ice_conc) == T, yc, NaN),
+          year_na = if_else(is.na(mean_ice_conc) == T, year, NaN), 
+          mean_ice_conc = if_else(is.na(mean_ice_conc) == T, mean(pull(subset(seaice_grid_laea,
+                                                                             xc >= xc_na - 50 &
+                                                                               xc <= xc_na + 50 & 
+                                                                               yc >= yc_na - 50 & 
+                                                                               yc <= yc_na + 50 & 
+                                                                               year == year_na,
+                                                                             select = mean_ice_conc),
+                                                                      mean_ice_conc),
+                                                                 na.rm = T),
+                                 mean_ice_conc),
+         openwater_duration = if_else(is.na(openwater_duration) == T, mean(pull(subset(seaice_grid_laea,
+                                                                                       xc >= xc_na - 50 &
+                                                                                         xc <= xc_na + 50 & 
+                                                                                         yc >= yc_na - 50 & 
+                                                                                         yc <= yc_na + 50 & 
+                                                                                         year == year_na,
+                                                                                       select = openwater_duration),
+                                                                                openwater_duration),
+                                                                           na.rm = T),
+                                      openwater_duration),
+         seaice_duration = if_else(is.na(seaice_duration) == T, mean(pull(subset(seaice_grid_laea,
+                                                                                 xc >= xc_na - 50 &
+                                                                                   xc <= xc_na + 50 & 
+                                                                                   yc >= yc_na - 50 & 
+                                                                                   yc <= yc_na + 50 & 
+                                                                                   year == year_na,
+                                                                                 select = seaice_duration),
+                                                                          seaice_duration),
+                                                                     na.rm = T),
+                                   seaice_duration)) %>%
+  filter(depth == 380) %>% # Select data at 380 m depth
   mutate(SA_int = 10 * log10(NASC_int)) %>%
   group_by(area) %>%
-  mutate(SA_int_n = (SA_int - min(SA_int)) / (max(SA_int - min(SA_int))),
-         velocity_n = (velocity - min(velocity)) / (max(velocity - min(velocity)))) %>%
-  ungroup()
+  mutate(SA_int_n = (SA_int - min(SA_int)) / (max(SA_int - min(SA_int)))) %>% # SA_int_n per area
+  ungroup() %>%
+  dplyr::select(-mean_NASC_area_year, -sd_NASC_area_year, -NASC_anomaly_d, -cell_res, -vxo, -vyo,
+                -mean_temp_area_depth, -mean_velo_area_depth, -xc_na, -yc_na, -year_na)
 ```
 
 
@@ -121,8 +161,8 @@ stat_laea %>% # Backscatter
 stat_laea %>% # Backscatter anomaly
   ggplot(aes(x = xc,  y = yc)) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = NASC_anomaly_d), color = "grey30") +
-  scale_fill_manual("Anomaly sA", values = rev(brewer.pal(n = 5, name = "BrBG")), na.value = "red") +
+  geom_tile(aes(fill = openwater_duration), color = "grey30") +
+  scale_fill_viridis_c("Anomaly sA", option = "plasma", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("SA ano") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
@@ -165,18 +205,6 @@ stat_laea %>% # Ice concentration
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
 
-```{r map-velocity-normalized, fig.height=3, fig.width=7}
-stat_laea %>% # Ice concentration
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = velocity_n), color = "grey30") +
-  scale_fill_cmocean("Normalized velo", name = "speed", na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Current velocity at 380 m depth") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
 ```{r map-mld, fig.height=3, fig.width=7}
 stat_laea %>% # Mixed layer depth
   ggplot(aes(x = xc,  y = yc)) +
@@ -213,74 +241,253 @@ stat_laea %>% # Ice concentration
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
 
-Check the general correlation for the entire data set.
+# Linear mixed model
 
-```{r corr-calculations}
-corr <- stat_laea %>% # Compute Spearman correlation matrix
-  dplyr::select(SA_int_n, NASC_anomaly, thetao, temp_anomaly, velocity, velocity_anomaly, siconc) %>%
+## Data preparation
+
+I require the following packages to fit GLMM.
+
+```{r glm-packages, message=FALSE}
+library(lme4)
+library(MASS)
+library(vcdExtra)
+library(bbmle)
+library(MuMIn)
+library(ggplot2)
+library(DescTools)
+library(remotes)
+library(gridExtra)
+library(lattice)
+```
+
+
+Select the variables of interest, SA_int_n (per area), velocity, temperature anomaly, and openwater_duration.
+
+```{r}
+SA_df <- stat_laea %>%
+  dplyr::select(year, xc, yc, area, SA_int, velocity, temp_anomaly, thetao, openwater_duration)
+```
+
+
+Summary of data. The dataset is not perfectly balanced.
+
+```{r table-summary-df}
+table(SA_df[, c("area", "year")])
+```
+
+Scatterplot of responses of covariates.
+
+```{r scatterplot-df, message=FALSE}
+plot_grid(SA_df %>%
+            ggplot(aes(x = velocity, y = SA_int, col = area)) + 
+            geom_point(),
+          SA_df %>%
+            ggplot(aes(x = thetao, y = SA_int, col = area)) + 
+            geom_point(),
+          SA_df %>%
+            ggplot(aes(x = openwater_duration, y = SA_int, col = area)) + 
+            geom_point())
+```
+
+Distribution of continuous variables.
+
+```{r hist-df, message=FALSE}
+plot_grid(SA_df %>%
+            ggplot(aes(x = SA_int)) + 
+            geom_histogram(),
+          SA_df %>%
+            ggplot(aes(x = velocity)) + 
+            geom_histogram(),
+          SA_df %>%
+            ggplot(aes(x = thetao)) + 
+            geom_histogram(),
+          SA_df %>%
+            ggplot(aes(x = openwater_duration)) + 
+            geom_histogram())
+```
+
+Check colinearity.
+
+```{r colinearity}
+corr <- SA_df %>% # Compute Spearman correlation matrix
+  dplyr::select(-year, -xc, -yc, -area) %>%
   cor(., method = "spearman") %>%
   round(., 2)
-corr_pvalues <- stat_laea %>% # Compute Spearman correlation matrix p-values
-  dplyr::select(SA_int_n, NASC_anomaly, thetao, temp_anomaly, velocity, velocity_anomaly, siconc) %>%
-  cor_pmat(., method = "spearman") 
+ggcorrplot(corr, type = "lower", lab = T)
 ```
 
-```{r corr-plot}
-ggcorrplot(corr, type = "lower", p.mat = corr_pvalues)
+Scale data per area.
+
+```{r}
+SA_df <- SA_df %>%
+  # group_by(area) %>%
+  mutate(SA_int_n = (SA_int - min(SA_int)) / (max(SA_int) - min(SA_int)),
+         velo_n = (velocity - min(velocity)) / (max(velocity) - min(velocity)),
+         temp_n = (thetao - min(thetao)) / (max(thetao) - min(thetao)),
+         ow_n = (openwater_duration - min(openwater_duration)) / (max(openwater_duration) - min(openwater_duration))) %>%
+  ungroup()
 ```
 
-S~A~ int is not correlated with temperature and velocity. However, these correlation are for the entire dataset and do not take into account the spatial aspect of the data.
+## Model fitting
 
-# Spatial correlation
+Fit a linear model.
 
-## Integrated backscatter 
-
-```{r scatterplot-velocity, fig.height=3, fig.width=8}
-stat_laea %>%
-  # filter(area == "SV") %>%
-  ggplot(aes(x = velocity, y = SA_int_n)) +
-  # ggplot(aes(x = velocity, y = NASC_anomaly)) +
-  geom_point() + 
-  geom_smooth(method = "lm") +
-  # facet_wrap(~ IHO_area) +
-  facet_wrap(~ area) +
-  theme(legend.position = "top")
-```
-```{r scatterplot-temp-anomaly, fig.height=3, fig.width=8}
-stat_laea %>%
-  # filter(area == "SV") %>%
-  ggplot(aes(x = temp_anomaly, y = SA_int_n)) +
-  # ggplot(aes(x = velocity, y = NASC_anomaly)) +
-  geom_point() + 
-  geom_smooth(method = "lm") +
-  # facet_wrap(~ IHO_area) +
-  facet_wrap(~ area, scales = "free_x") +
-  theme(legend.position = "top")
+```{r lm-test}
+lm_test <- lm(SA_int_n ~ velo_n + temp_n + ow_n, data = SA_df) # Fit model
+lm_test_resid <- rstandard(lm_test) # Calculate residuals
 ```
 
-```{r scatterplot-siconc, fig.height=3, fig.width=8}
-stat_laea %>%
-  # filter(area == "SV") %>%
-  ggplot(aes(x = siconc, y = SA_int_n)) +
-  # ggplot(aes(x = velocity, y = NASC_anomaly)) +
-  geom_point() + 
-  geom_smooth(method = "lm") +
-  # facet_wrap(~ IHO_area) +
-  facet_wrap(~ area, scales = "free_x") +
-  theme(legend.position = "top")
+Plot residuals.
+
+```{r lm-test-resids}
+par(mfrow = c(1, 2))
+plot(lm_test_resid ~ as.factor(SA_df$area), xlab = "Area", ylab = "Standardized residuals")
+abline(0, 0, lty = 2)
+plot(lm_test_resid ~ as.factor(SA_df$year), xlab = "Year", ylab = "Standardized residuals")
+abline(0, 0, lty = 2)
 ```
 
-I will calculate the correlation between integrated backscatter and current velocity for each cell of the raster. Before calculating the correlation I need to check the distribution of the data.
+There is residual variance that could be explained by area but not so much by the year. So I fit a linear mixed model.
 
-```{r distribution-NASC-anomaly-velocity, fig.height=3, fig.width=7}
-plot_grid(stat_laea %>%
-            ggdensity(x = "SA_int_n", fill = "lightgray") +
-            stat_overlay_normal_density(color = "red", linetype = "dashed") +
-            scale_x_continuous(expression("S"[A]*" int (dB)")),
-          stat_laea %>%
-            ggdensity(x = "velocity_n", fill = "lightgray") +
-            stat_overlay_normal_density(color = "red", linetype = "dashed") +
-            scale_x_continuous(expression("Current velocity (m s"^-1*")")))
+```{r}
+lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area), data = SA_df, REML = TRUE)
 ```
 
-The grey black curve is the density of the data (S~A~ int and ) and the red curve is the normal distribution. 
+Incorporate different model sturctures (random intercepts and random slopes).
+
+```{r lmer}
+# Note that REML = FALSE in order to compare with the basic linear model where estimation method = ML
+# Basic linear model / Linear model with no random effects
+M0 <- lm(SA_int_n ~ velo_n + temp_n + ow_n,
+          data = SA_df)
+# Full model with varying intercepts
+M1 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area) + (1 | year), 
+           data = SA_df, REML = T)
+# Full model with varying intercepts and slopes
+M2 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n +
+             (1 + velo_n | area) + (1 + temp_n | area) + (1 + ow_n | area) +
+             (1 + velo_n | year) + (1 + temp_n | year) + (1 + ow_n | year),
+           data = SA_df, REML = FALSE)
+# No year varying intercepts only
+M3 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area), 
+           data = SA_df, REML = FALSE)
+# No area varying intercepts only
+M4 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | year), 
+           data = SA_df, REML = FALSE)
+# No year, varying intercepts and slopes
+M5 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + 
+             (1 + velo_n | area) + (1 + temp_n | area) + (1 + ow_n | area),
+           data = SA_df, REML = FALSE)
+# No area, varying intercepts and slopes
+M6 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n +
+             (1 + velo_n | year) + (1 + temp_n | year) + (1 + ow_n | year),
+           data = SA_df, REML = FALSE)
+# Full model with varying intercepts and slopes only varying by area
+M7 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | year) +
+             (1 + velo_n | area) + (1 + temp_n | area) + (1 + ow_n | area),
+           data = SA_df, REML = FALSE)
+# Full model with varying intercepts and slopes only varying by year
+M8 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area) +
+             (1 + velo_n | year) + (1 + temp_n | year) + (1 + ow_n | year),
+           data = SA_df, REML = FALSE)
+```
+
+Compare models.
+
+```{r model-comparison}
+# To group all AICc values into a single table, we can use MuMIn::model.sel() to calculate AICc for each model
+MuMIn::model.sel(M0, M1, M2, M3, M4, M5, M6, M7, M8)[, c("df", "logLik", "AICc", "delta")] 
+```
+
+M3, the model which does not include a year effect is the best model. I therefore refit M3 with REML for further analyses.
+
+```{r refit-M3}
+# No year varying intercepts only
+M3_bis <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area), 
+               data = SA_df, REML = TRUE)
+```
+
+## Model validation 
+
+Check homogeneity of variance.
+
+```{r variance-homogeneity}
+MX <- M3_bis
+# Plot predicted values vs residual values
+par(mar = c(4, 4, 0.5, 0.5))
+plot(resid(MX) ~ fitted(MX), xlab = "Predicted values", ylab = "Normalized residuals")
+abline(h = 0, lty = 2)
+```
+
+Assumption is met.
+
+Check independence of model residuals with each covariate. First I plot the residuals vs each covariate.
+
+```{r, fig.width=12, fig.height=4}
+MX <- M3_bis
+# In order to check the independence of the model residuals we need to plot residuals vs each covariate of the model
+par(mfrow = c(1, 5), mar = c(4, 4, 0.5, 0.5))
+plot(resid(MX) ~ SA_df$velo_n, xlab = "Velocity normalized", ylab = "Normalized residuals")
+abline(h = 0, lty = 2)
+plot(resid(MX) ~ SA_df$temp_n, xlab = "Temperature normalized", ylab = "Normalized residuals")
+abline(h = 0, lty = 2)
+plot(resid(MX) ~ SA_df$ow_n, xlab = "Openwater normalized", ylab = "Normalized residuals")
+abline(h = 0, lty = 2)
+boxplot(resid(MX) ~ area, data = SA_df, xlab = "Area", ylab = "Normalized residuals")
+abline(h = 0, lty = 2)
+boxplot(resid(MX) ~ year, data = SA_df, xlab = "Year", ylab = "Normalized residuals")
+abline(h = 0, lty = 2)
+```
+
+Check normality of residuals.
+
+```{r normality}
+qqnorm(resid(M3_bis))
+qqline(resid(M3_bis))
+```
+
+Residuals are pretty normal except for two outliers.
+
+## Model interpretation and visualisation
+
+Check the summary of our model.
+
+```{r model-summary}
+summary(M3_bis)
+# Calculate confidence interval for parameter
+CI_velo <- c(0.06237 * 1.96 - 0.11992, 0.06237 * 1.96 + 0.11992) # velocity, significantly different from 0
+CI_velo
+CI_temp <- c(0.07025 * 1.96 - 0.13684, 0.07025 * 1.96 + 0.13684) # temperature, significantly different from 0
+CI_temp
+CI_ow <- c(0.06924 * 1.96 - 0.44054, 0.06924 * 1.96 + 0.44054) # openwater, NOT significantly different from 0
+CI_ow
+```
+
+Plot results 
+
+```{r plot-m3}
+area_coef <- coef(M3_bis)$area
+
+SA_df %>%
+  ggplot() +
+  geom_point(aes(x = velo_n, y = SA_int_n, col = factor(area)), size = 4) + 
+  geom_abline(intercept = area_coef[1, 1], slope = area_coef[1, 2], col = "coral2", size = 1) +
+  geom_abline(intercept = area_coef[2, 1], slope = area_coef[2, 2], col = "green4", size = 1) +
+  geom_abline(intercept = area_coef[3, 1], slope = area_coef[3, 2], col = "blue1", size = 1)
+
+SA_df %>%
+  ggplot() +
+  geom_point(aes(x = temp_n, y = SA_int_n, col = factor(area)), size = 4) + 
+  geom_abline(intercept = area_coef[1, 1], slope = area_coef[1, 3], col = "coral2", size = 1) +
+  geom_abline(intercept = area_coef[2, 1], slope = area_coef[2, 3], col = "green4", size = 1) +
+  geom_abline(intercept = area_coef[3, 1], slope = area_coef[3, 3], col = "blue1", size = 1)
+
+SA_df %>%
+  ggplot() +
+  geom_point(aes(x = ow_n, y = SA_int_n, col = factor(area)), size = 4) + 
+  geom_abline(intercept = area_coef[1, 1], slope = area_coef[1, 4], col = "coral2", size = 1) +
+  geom_abline(intercept = area_coef[2, 1], slope = area_coef[2, 4], col = "green4", size = 1) +
+  geom_abline(intercept = area_coef[3, 1], slope = area_coef[3, 4], col = "blue1", size = 1)
+```
+
+I am not too convinced so I fit a hierarchical gam.
